# Lics-code-rust

./: .env.example   .gitignore  Cargo.toml  README.md
examples/: stream_chat.rs  structured_chat.rs  tool_call_complete.rs
src/: constant.rs  gaia.rs  lib.rs  llm.rs  tools.rs
src/gaia/: dataset.rs  evaluator.rs  models.rs  solver.rs
src/llm/: complete.rs  semaphore.rs  stream.rs  structured.rs
src/models/: action_plan.rs
src/tools/calculator/: definition.rs  execute.rs
