[package]
name = "lic_rust_code"
version = "0.1.0"
edition = "2024"

[[example]]
name = "stream_chat"
path = "examples/stream_chat.rs"

[[example]]
name = "structured_chat"
path = "examples/structured_chat.rs"

[[example]]
name = "tool_call_complete"
path = "examples/tool_call_complete.rs"

[[example]]
name = "rand"
path = "examples/cookbook/rand.rs"

[[example]]
name = "sortvec"
path = "examples/cookbook/sortvec.rs"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.0" ,features = ["chat-completion"] }
async-stream = "0.3.6"
dotenv = "0.15.0"
features = "0.10.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
futures = "0.3.32"
backon = "1.6.0"
reqwest = { version = "0.13.4", features = ["json"] }
rand = "0.10.2"

